Fix: по Заданию 4: поменять фреймворк с selenium на Selenide и jUnit5